# CoursePlatform

./: .env.example  .gitignore  Dockerfile  ILMSpace TZ.txt  README.md  docker-compose.yml  nginx.conf  pyproject.toml  utils.py  yaml
.github/workflows/: deploy.yml
CoursePlatform/: asgi.py  settings.py  urls.py  wsgi.py
authors/: admin.py  models.py
authors/migrations/: 0001_initial.py  0002_initial.py
bot/: functions.py  main.py
courses/: admin.py  forms.py  models.py  urls.py  views.py
courses/migrations/: 0001_initial.py  0002_initial.py  0003_lesson_video_file_alter_lesson_video_url.py
courses/templatetags/: course_filters.py
moderation/: admin.py  models.py
moderation/migrations/: 0001_initial.py
payments/: admin.py  models.py
payments/migrations/: 0001_initial.py
scripts/: deploy.sh  server_setup.sh
static/css/: main.css
students/: admin.py  models.py
students/migrations/: 0001_initial.py  0002_initial.py
templates/: admin_home.html  author_home.html  base.html  landing.html  student_home.html
templates/account/: login.html  login_phone.html  login_verify_otp.html  logout.html  profile.html  profile_edit.html  register_choice.html  register_details.html  register_email.html  register_phone.html  register_verify_otp.html  signup.html
templates/components/: _footer.html  _navbar.html
templates/courses/: course_builder.html  course_create.html  course_detail.html  course_learn.html  course_list.html
users/: adapters.py  admin.py  base.py  decorators.py  forms.py  models.py  urls.py  views.py
users/management/commands/: create_test_users.py
users/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_add_age_telegram_id.py
